benefit section finished

--- a/index.html
+++ b/index.html
@@ -57,55 +57,69 @@
 
     <section class="benefit">
         <div class="container">
-            <div class="benefit__inner">
+            <h2>
                 Что мы предлагаем
-            </div>
+            </h2>
+            <div class="benefit-items">
 
-            <div class="benefit__items">
-                <div class="benefit-item__iamges">
-                    <img src="img/icon/check.png" alt="">
+                <div class="benefit-item">
+                    <div class="benefit-item__inner">
+                        <div class="benefit-item__iamges">
+                            <img src="img/icon/check.png" alt="">
+                        </div>
+                        <div class="benefit-item__name">
+                            МАРКЕТПЛЕЙС
+                        </div>
+                        <div class="benefit-item__text">
+                            Онлайн-сервис, позволяющий гражданам приобретать финансовые продукты от разных организаций
+                            на
+                            одной платформе в круглосуточном режиме
+                        </div>
+                    </div>
                 </div>
-                <div class="benefit-item__name">
-                    МАРКЕТПЛЕЙС
-                </div>
-                <div class="benefit-item__text">
-                    Онлайн-сервис, позволяющий гражданам приобретать финансовые продукты от разных организаций на одной платформе в круглосуточном режиме
-                </div>
-            </div>
 
-            <div class="benefit__items">
-                <div class="benefit-item__iamges">
-                    <img src="img/icon/monitors.png" alt="">
+                <div class="benefit-item">
+                    <div class="benefit-item__inner">
+                        <div class="benefit-item__iamges">
+                            <img src="img/icon/monitors.png" alt="">
+                        </div>
+                        <div class="benefit-item__name">
+                            МОНИТОРИНГ ПРЕДПРИЯТИЙ
+                        </div>
+                        <div class="benefit-item__text">
+                            Полученные данные используются для анализа и прогнозирования инфляции, развития экономики
+                            России
+                        </div>
+                    </div>
                 </div>
-                <div class="benefit-item__name">
-                    МОНИТОРИНГ ПРЕДПРИЯТИЙ
-                </div>
-                <div class="benefit-item__text">
-                    Полученные данные используются для анализа и прогнозирования инфляции, развития экономики России
-                </div>
-            </div>
 
-            <div class="benefit__items">
-                <div class="benefit-item__iamges">
-                    <img src="img/icon/hand.png" alt="">
+                <div class="benefit-item">
+                    <div class="benefit-item__inner">
+                        <div class="benefit-item__iamges">
+                            <img src="img/icon/hand.png" alt="">
+                        </div>
+                        <div class="benefit-item__name">
+                            БЫСТРЫЕ ПЛАТЕЖИ
+                        </div>
+                        <div class="benefit-item__text">
+                            Важнейший инфраструктурный проект национального значения, направленный на содействие
+                            конкуренции
+                        </div>
+                    </div>
                 </div>
-                <div class="benefit-item__name">
-                    БЫСТРЫЕ ПЛАТЕЖИ
-                </div>
-                <div class="benefit-item__text">
-                    Важнейший инфраструктурный проект национального значения, направленный на содействие конкуренции
-                </div>
-            </div>
 
-            <div class="benefit__items">
-                <div class="benefit-item__iamges">
-                    <img src="img/icon/document.png" alt="">
-                </div>
-                <div class="benefit-item__name">
-                    СТАНДАРТ ОТЧЕТНОСТИ
-                </div>
-                <div class="benefit-item__text">
-                    Начиная с 2018 года формат представления отчетности XBRL стал обязательным для страховщиков
+                <div class="benefit-item">
+                    <div class="benefit-item__inner">
+                        <div class="benefit-item__iamges">
+                            <img src="img/icon/document.png" alt="">
+                        </div>
+                        <div class="benefit-item__name">
+                            СТАНДАРТ ОТЧЕТНОСТИ
+                        </div>
+                        <div class="benefit-item__text">
+                            Начиная с 2018 года формат представления отчетности XBRL стал обязательным для страховщиков
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
