section call finished and section offers started

--- a/index.html
+++ b/index.html
@@ -125,6 +125,113 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                    <div class="about-info__image">
+                        <img src="img/about.jpg" alt="">
+                    </div>
+                    <div class="about-info__title">
+                        Несколько слов о компании
+                    </div>
+                    <div class="about-info__description">
+                       <p> В XX―XXI веках произошло значительное сокращение барьеров глобальной конкуренции в банковской
+                        сфере. Рост телекоммуникационных и других финансовых технологий позволил банкам расширить сферу
+                        своей деятельности по всему миру, поскольку их сотрудникам больше не нужно находиться рядом с
+                        клиентами, чтобы управлять финансами и рисками.</p>
+                        <br>
+                       <p> Рост трансграничного взаимодействия также увеличил спрос на банковские услуги, которые отныне
+                        могут предоставляться граждан самых разных стран. Однако, несмотря на уменьшение барьеров и рост
+                        трансграничной активности, банковская индустрия по-прежнему не так глубоко глобализирована, как
+                        некоторые другие отрасли экономики.</p>
+                    </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="call">
+        <div class="container">
+            <div class="call__inner">
+                <div class="call-title">
+                    Свяжитесь с нами прямо сейчас
+                </div>
+                <div class="call-btn">
+                    <a href="#" class="call-btn__text">Заказать звонок</a>
+                </div>
+                <div class="call-btn__dscr">
+                    Мы перезвоним через 15 минут
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="offers">
+        <div class="container">
+            <div class="offers-title">
+                Лучшие предложения для вас
+            </div>
+            <div class="offers-subtitle">
+                Выберите предложение, которое подходит под решение ваших задач
+            </div>
+
+            <div class="offers-items">
+                
+                <div class="offers-item">
+                    <div class="offers-item__inner">
+                        <div class="offers-item__image">
+                            <img src="img/offersIcon/money.jpg" alt="">
+                        </div>
+                        <div class="offers-item__title">
+                            БЫСТРАЯ ОПЛАТА ЖКХ
+                        </div>
+                        <div class="offers-item__descr">
+                            Чтобы вовремя оплатить услуги ЖКХ, воспользуйтесь специальным QR-кодом. Благодаря этому вы сможете не отвлекаться от привычных дел
+                        </div>
+                        <div class="offers-item__btn">
+                            <a href="#" class="offer-item_btn-text">Узнать подробнее</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="offers-item">
+                    <div class="offers-item__inner">
+                        <div class="offers-item__image">
+                            <img src="img/offersIcon/pig_money.jpg" alt="">
+                        </div>
+                        <div class="offers-item__title">
+                            ДОХОД ДО 4,5% ПО ВКЛАДУ
+                        </div>
+                        <div class="offers-item__descr">
+                            Вместе с вкладами в нашем банке вы сможете зарабатывать приличную сумму денежных средств. Откройте вклад прямо сейчас
+                        </div>
+                        <div class="offers-item__btn">
+                            <a href="#" class="offer-item_btn-text">Узнать подробнее</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="offers-item">
+                    <div class="offers-item__inner">
+                        <div class="offers-item__image">
+                            <img src="img/offersIcon/stonks_money.jpg" alt="">
+                        </div>
+                        <div class="offers-item__title">
+                            ВРЕМЯ ИНВЕСТИРОВАТЬ
+                        </div>
+                        <div class="offers-item__descr">
+                            Любой желающий может начать инвестировать вместе с нашим банком. Мы предлагаем своим клиентам готовые решения
+                        </div>
+                        <div class="offers-item__btn">
+                            <a href="#" class="offer-item_btn-text">Узнать подробнее</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
 
 
 
