section offers finished and section credit started

--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
     <section class="about">
         <div class="container">
             <div class="about__inner">
-                    <div class="about-info__image">
-                        <img src="img/about.jpg" alt="">
-                    </div>
-                    <div class="about-info__title">
-                        Несколько слов о компании
-                    </div>
-                    <div class="about-info__description">
-                       <p> В XX―XXI веках произошло значительное сокращение барьеров глобальной конкуренции в банковской
+                <div class="about-info__image">
+                    <img src="img/about.jpg" alt="">
+                </div>
+                <div class="about-info__title">
+                    Несколько слов о компании
+                </div>
+                <div class="about-info__description">
+                    <p> В XX―XXI веках произошло значительное сокращение барьеров глобальной конкуренции в банковской
                         сфере. Рост телекоммуникационных и других финансовых технологий позволил банкам расширить сферу
                         своей деятельности по всему миру, поскольку их сотрудникам больше не нужно находиться рядом с
                         клиентами, чтобы управлять финансами и рисками.</p>
-                        <br>
-                       <p> Рост трансграничного взаимодействия также увеличил спрос на банковские услуги, которые отныне
+                    <br>
+                    <p> Рост трансграничного взаимодействия также увеличил спрос на банковские услуги, которые отныне
                         могут предоставляться граждан самых разных стран. Однако, несмотря на уменьшение барьеров и рост
                         трансграничной активности, банковская индустрия по-прежнему не так глубоко глобализирована, как
                         некоторые другие отрасли экономики.</p>
-                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -175,7 +175,7 @@
             </div>
 
             <div class="offers-items">
-                
+
                 <div class="offers-item">
                     <div class="offers-item__inner">
                         <div class="offers-item__image">
@@ -185,7 +185,8 @@
                             БЫСТРАЯ ОПЛАТА ЖКХ
                         </div>
                         <div class="offers-item__descr">
-                            Чтобы вовремя оплатить услуги ЖКХ, воспользуйтесь специальным QR-кодом. Благодаря этому вы сможете не отвлекаться от привычных дел
+                            Чтобы вовремя оплатить услуги ЖКХ, воспользуйтесь специальным QR-кодом. Благодаря этому вы
+                            сможете не отвлекаться от привычных дел
                         </div>
                         <div class="offers-item__btn">
                             <a href="#" class="offer-item_btn-text">Узнать подробнее</a>
@@ -202,7 +203,8 @@
                             ДОХОД ДО 4,5% ПО ВКЛАДУ
                         </div>
                         <div class="offers-item__descr">
-                            Вместе с вкладами в нашем банке вы сможете зарабатывать приличную сумму денежных средств. Откройте вклад прямо сейчас
+                            Вместе с вкладами в нашем банке вы сможете зарабатывать приличную сумму денежных средств.
+                            Откройте вклад прямо сейчас
                         </div>
                         <div class="offers-item__btn">
                             <a href="#" class="offer-item_btn-text">Узнать подробнее</a>
@@ -219,7 +221,8 @@
                             ВРЕМЯ ИНВЕСТИРОВАТЬ
                         </div>
                         <div class="offers-item__descr">
-                            Любой желающий может начать инвестировать вместе с нашим банком. Мы предлагаем своим клиентам готовые решения
+                            Любой желающий может начать инвестировать вместе с нашим банком. Мы предлагаем своим
+                            клиентам готовые решения
                         </div>
                         <div class="offers-item__btn">
                             <a href="#" class="offer-item_btn-text">Узнать подробнее</a>
@@ -229,6 +232,28 @@
 
             </div>
 
+        </div>
+    </section>
+
+    <section class="credit">
+        <div class="container">
+            <div class="credit-info">
+                <div class="credit-info__img">
+                    <img src="img/credit/money_hand.jpg" alt="">
+                </div>
+                <div class="crdit-info__block">
+                    <div class="credit-info__title">
+                        Оформите кредит на любые цели за 5 минут
+                    </div>
+                    <div class="credit-info__descr">
+                        Любой желающий может оформить в нашем банке кредит на любые цели. Для этого вам необходимо
+                        оставить заявку на сайте или позвонить по номеру 8 800 333 22 33
+                    </div>
+                    <div class="credit-info__btn">
+                        <a href="#" class="credit-info__btn-text">Оформить кредит</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
