--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 </div>
                 <div class="crdit-info__block">
                     <div class="credit-info__title">
-                        Оформите кредит на любые цели за 5 минут
+                        Оформите кредит на <br> любые цели за 5 минут
                     </div>
                     <div class="credit-info__descr">
                         Любой желающий может оформить в нашем банке кредит на любые цели. Для этого вам необходимо
