Last News finished and often questions finished. Consultation started

--- a/index.html
+++ b/index.html
@@ -257,7 +257,182 @@
         </div>
     </section>
 
+    <section class="lastNews">
+        <div class="container">
+            <div class="lastNews-info">
+                <div class="lastNews-info__title">
+                    Последние новости
+                </div>
+                <div class="lastNews-info__subtitle">
+                    Предлагаем клиентам ознакомиться с последними новостями банка
+                </div>
 
+                <div class="lastNews-info-items">
+
+                    <div class="lastNews-item">
+                        <div class="lastNews-item__img">
+                            <img src="img/LastNews/builders.jpg" alt="">
+                        </div>
+                        <div class="lastNews-item__title">
+                            Банки заключили с застройщиками кредитные договоры на 2 триллиона рублей
+                        </div>
+                        <div class="lastNews-item__descr">
+                            Общий объем средств, размещенных участниками долевого строительства на счетах эскроу, на 1
+                            ноября 2020 года составил 851 млрд рублей, а 64,1 млрд рублей по завершенным проектам
+                            строительства уже перечислено застройщикам или в погашение кредитов на строительство
+                            объектов. Общий лимит кредитных договоров, заключенных банками и застройщиками, превысил 2
+                            трлн рублей.
+                        </div>
+                    </div>
+
+                    <div class="lastNews-item">
+                        <div class="lastNews-item__img">
+                            <img src="img/LastNews/businessman.jpg" alt="">
+                        </div>
+                        <div class="lastNews-item__title">
+                            Публичные компании активно внедряют принципы корпоративного управления
+                        </div>
+                        <div class="lastNews-item__descr">
+                            Более информативными стали объяснения компаний, почему они их не соблюдают. Внимательнее к
+                            объяснениям стали относиться также компании, акции которых включены в третий уровень списка
+                            ценных бумаг Московской Биржи, а некоторые общества заявили о планах внедрить рекомендации в
+                            свои корпоративные практики. Банк России проводит мониторинг этих компаний второй год,
+                            сейчас их 151.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lastNews-info-items">
+
+                    <div class="lastNews-item">
+                        <div class="lastNews-item__img">
+                            <img src="img/LastNews/gold.jpg" alt="">
+                        </div>
+                        <div class="lastNews-item__title">
+                            Новые требования по включению в государственный реестр ломбардов
+                        </div>
+                        <div class="lastNews-item__descr">
+                            По закону с 11 января 2021 года новую процедуру допуска на рынок должны будут пройти как
+                            действующие ломбарды, так и вновь создаваемые. Специалисты Банка России расскажут, каким
+                            требованиям должны удовлетворять ломбарды.
+                        </div>
+                    </div>
+
+                    <div class="lastNews-item">
+                        <div class="lastNews-item__img">
+                            <img src="img/LastNews/money.jpg" alt="">
+                        </div>
+                        <div class="lastNews-item__title">
+                            Ситуация на отдельных продовольственных рынках сказалась на инфляции в ноябре
+                        </div>
+                        <div class="lastNews-item__descr">
+                            Осенний подъем заболеваемости коронавирусом не привел к значительным изменениям
+                            потребительского поведения и ценовой динамики, чему способствовали точечный характер
+                            принимаемых мер и адаптация граждан и предприятий к новым условиям.
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="questions">
+        <div class="container">
+            <div class="questions__inner">
+                <div class="questions-title">
+                    Часто задаваемые вопросы
+                </div>
+                <div class="questions-subtitle">
+                    Я постарался ответить на часто задаваемые клиентами вопросы
+                </div>
+
+                <div class="questions-items">
+
+                    <div class="questions-item">
+                        <div class="questions-item__problem">
+                            Куда можно обратиться с вопросами по операциям с картой?
+                        </div>
+                        <div class="questions-item__btn">
+                            <a href="#" class="questions-item__btn-text">+</a>
+                        </div>
+                        <div class="questions-item__answer">
+                            Можно сказать с уверенностью, что все российские банки разрешают своим заемщикам погашать
+                            займы досрочно. Однако некоторые банки разрешают делать это, начиная с какого-то момента,
+                            например, только через полгода. Другие банки при досрочном погашении взимают небольшую
+                            комиссию.
+                        </div>
+                    </div>
+
+                    <div class="questions-item">
+                        <div class="questions-item__problem">
+                            Какие операции можно проводить по карте?
+                        </div>
+                        <div class="questions-item__btn">
+                            <a href="#" class="questions-item__btn-text">+</a>
+                        </div>
+                        <div class="questions-item__answer">
+                            Можно сказать с уверенностью, что все российские банки разрешают своим заемщикам погашать
+                            займы досрочно. Однако некоторые банки разрешают делать это, начиная с какого-то момента,
+                            например, только через полгода. Другие банки при досрочном погашении взимают небольшую
+                            комиссию.
+                        </div>
+                    </div>
+
+                    <div class="questions-item">
+                        <div class="questions-item__problem">
+                            Вправе ли банки отказывать клиенту в размене наличных денег?
+                        </div>
+                        <div class="questions-item__btn">
+                            <a href="#" class="questions-item__btn-text">+</a>
+                        </div>
+                        <div class="questions-item__answer">
+                            Можно сказать с уверенностью, что все российские банки разрешают своим заемщикам погашать
+                            займы досрочно. Однако некоторые банки разрешают делать это, начиная с какого-то момента,
+                            например, только через полгода. Другие банки при досрочном погашении взимают небольшую
+                            комиссию.
+                        </div>
+                    </div>
+
+                    <div class="questions-item">
+                        <div class="questions-item__problem">
+                            Где и как можно обменять поврежденные банкноты Банка России?
+                        </div>
+                        <div class="questions-item__btn">
+                            <a href="#" class="questions-item__btn-text">+</a>
+                        </div>
+                        <div class="questions-item__answer">
+                            Можно сказать с уверенностью, что все российские банки разрешают своим заемщикам погашать
+                            займы досрочно. Однако некоторые банки разрешают делать это, начиная с какого-то момента,
+                            например, только через полгода. Другие банки при досрочном погашении взимают небольшую
+                            комиссию.
+                        </div>
+                    </div>
+
+                    <div class="questions-item">
+                        <div class="questions-item__problem">
+                            Почему отказывают в приеме монет мелкого номинала? Законно ли это?
+                        </div>
+                        <div class="questions-item__btn">
+                            <a href="#" class="questions-item__btn-text" id="blo">+</a>
+                        </div>
+                        <div class="questions-item__answer">
+                            Можно сказать с уверенностью, что все российские банки разрешают своим заемщикам погашать
+                            займы досрочно. Однако некоторые банки разрешают делать это, начиная с какого-то момента,
+                            например, только через полгода. Другие банки при досрочном погашении взимают небольшую
+                            комиссию.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="consultation">
+        <div class="container">
+            
+        </div>
+    </section>
 
 
 
