earlier work finished and footer started

--- a/index.html
+++ b/index.html
@@ -430,9 +430,83 @@
 
     <section class="consultation">
         <div class="container">
-            
+            <div class="consultation__inner">
+                <div class="consultation-img">
+                    <img src="img/consultation/service.jpeg" alt="">
+                </div>
+
+                <div class="consultation-info ">
+                    <div class="consultation-info__title">
+                        Консультация специалиста
+                    </div>
+                    <div class="consultation-info__decrk">
+                        Если у вас возникли какие-либо вопросы, которые касаются нашей деятельности, тогда вы
+                        можете задать их специалисту. Для этого вам необходимо оставить заявку на сайте или
+                        позвонить по номеру 8 800 333 22 33F
+                    </div>
+                    <div class="consultation-info__btn">
+                        <a href="#" class="consultation-info__btn-text">Оставить заявку</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__inner">
+            <div class="footer-map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d859.0209055713393!2d45.93210959476045!3d51.4926431710735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4114c0ce7f1626ff%3A0x4be3713100a39b85!2zMy3QuSDQmtCw0LLQutCw0LfRgdC60LjQuSDRgtGD0L8uLCA0LCDQodCw0YDQsNGC0L7Qsiwg0KHQsNGA0LDRgtC-0LLRgdC60LDRjywgNDEwMDQ5!5e0!3m2!1sru!2sru!4v1609176433968!5m2!1sru!2sru"
+                    width="1300" height="450" frameborder="0" style="border:0;" allowfullscreen=""
+                    aria-hidden="false" tabindex="0">
+                </iframe>
+            </div>
+            <div class="footer-contactInf">
+                <div class="footer-contactInf__title">
+                    Контактная информация:
+
+                    <ul class="footer-contactInf__list">
+                        <li>Чебоксары, школьный проезд 1.</li>
+                        <li>E-mail: Test@yandex.ru</li>
+                        <li>Телефон: 8 800 300 06 00 отдела продаж</li>
+                        <li>Телефон: 8 800 340 06 00 отдела сбыта</li>
+                        <li>Контактное лицо: Степанов В.И.</li>
+                    </ul>
+                </div>
+                <div class="footer-socila__title">
+                    Присоединяйтесь к нам в социальных сетях!
+                </div>
+                <div class="footer-socila__sites">
+                    <a href="#"><img src="img/footer_icon/vk.jpg" alt=""></a>
+                    <a href="#"><img src="img/footer_icon/inst.jpg" alt=""></a>
+                    <a href="#"><img src="img/footer_icon/wa.jpg" alt=""></a>
+                    <a href="#"><img src="img/footer_icon/fb.jpg" alt=""></a>
+                    <a href="#"><img src="img/footer_icon/yt.jpg" alt=""></a>
+                    <a href="#"><img src="img/footer_icon/od.jpg" alt=""></a>
+                    <a href="#"><img src="img/footer_icon/vib.jpg" alt=""></a>
+                    <a href="#"><img src="img/footer_icon/tg.jpg" alt=""></a>
+                </div>
+            </div>
+
+            <div class="footer-AdditionalInf">
+                <div class="footer-AdditionalInf__img">
+                    <img src="img/Logo.png" alt="">
+                </div>
+                <div class="footer-AdditionalInf__about">
+                    ООО «СтройТрейд», 123456, г.Москва, ул. Центральная 1, офис 1<br>
+                    ИНН 1234567890 ОГРН 123456789012
+                </div>
+            </div>
+            <div class="footer-number">
+                <div class="footer-phoneNumber">
+                    8 800 333 22 33
+                </div>
+                <div class="footer-phoneNumber-descr">
+                    Звонок по России бесплатный
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
