--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
           </nav>
 
-          <div class="content-menu">
+          <div class="content-menu hidden">
             <div></div>
           </div>
         </div>
